# ketsu

./: .gitignore  README.md  note2.ipynb  note_cv.ipynb  note_seg.ipynb  pyproject.toml
ketsu/: datasets.py  det.py  detectors.py  main.py  models.py  seg.py
ketsu/detectors/: __init__.py  base.py
ketsu/utils/: __init__.py  cli.py  seed.py
