[project]
name = "ketsu"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
# package-dir = {"" = "."}

dependencies = [
    "albumentations>=2.0.3",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "lightning[extra]>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "monai>=1.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pytorch-lightning>=2.5.0.post0",
    "taskipy>=1.14.1",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
]

[tool.setuptools]
packages = ["ketsu"]

[tool.taskipy.tasks]
main = "python -m ketsu.main"
