[project]
name = "ketsu"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
# package-dir = {"" = "."}

dependencies = [
    "albumentations>=2.0.3",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "lightning[extra]>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "monai>=1.4.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pyqt6>=6.8.1",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-image>=0.25.1",
    "scikit-optimize>=0.10.2",
    "segmentation-models-pytorch>=0.4.0",
    "taskipy>=1.14.1",
    "tensorboard>=2.18.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchmetrics>=1.6.1",
    "torchvision>=0.21.0",
]

[tool.setuptools]
packages = ["ketsu"]

[tool.taskipy.tasks]
seg = "python -m ketsu.seg"
det = "python -m ketsu.det"
